[package]
name = "sqlite-hypercore"
version = "0.0.1"
edition = "2018"
description = "Provides an extension to SQLite that allows for Hypercore to be used as a virtual file system (VFS)."
repository = "https://git.jacky.wtf/me/sqlite-hypercore"

[features]
default = []
all = []

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
log = "0.4.14"
libsqlite3-sys = "0.23.1"

# [dependencies.rusqlite]
# version = "0.26.0"
# features = ["load_extension", "modern_sqlite"]
# NOTE: Should we add 'hooks'?
# NOTE: Should we add 'session'?
# NOTE: Should we add 'backup'?

[dev-dependencies]
env_logger = "0.9.0"
pretty_assertions = "0.7.2"

[profile.release]
lto = true
