[package]
name = "sqlite-hypercore"
version = "0.0.1"
edition = "2018"
description = "Provides an extension to SQLite that allows for Hypercore to be used as a virtual file system (VFS)."
repository = "https://git.jacky.wtf/me/sqlite-hypercore"
license = "MIT or BSD-2-Clause"

[features]
default = []
all = []

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.44"
log = "0.4.14"
futures = "0.3"
base64 = "0.13.0"
async-std = {version = "1", features = ["attributes"]}
env_logger = "0.9.0"

# FIXME: When 'hypercore' stabilizies, pin to a minor version.
# hypercore = "0.11.1-beta.8"
# random-access-disk = "2.0.0"
# random-access-storage = "4.0.0"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]
# NOTE: Should we add 'hooks'?
# NOTE: Should we add 'session'?
# NOTE: Should we add 'backup'?

[dev-dependencies]
pretty_assertions = "0.7.2"

[profile.release]
lto = true

[profile.dev]
panic = "unwind"
opt-level = 0
